@@ -697,9 +697,9 @@ sub resolve_depends {
 	my $field = shift;
 	my $forceoff = shift || 0;
 	my (@speclist, @deplist, $altlist);
-	my ($altspec, $depspec, $depname, $versionspec, $package);
+	my ($altspecs, $depspec, $depname, $versionspec, $package);
 	my ($splitoff, $idx, $split_idx);
-	my ($oper);
+	my ($oper, $multi, $found, @altspec, $loopcount);
 	if (lc($field) eq "conflicts") {
 		$oper = "conflict";
 	} elsif (lc($field) eq "depends") {
@@ -725,8 +725,16 @@ sub resolve_depends {
 		@speclist = split(/\s*\,\s*/, $self->param_default($field, ""));
 # with this primitive form of @speclist, we verify that the "BuildDependsOnly"
 # declarations have not been violated
-		foreach $altspec (@speclist){
-		    BUILDDEPENDSLOOP: foreach $depspec (split(/\s*\|\s*/, $altspec)) {
+		foreach $altspecs (@speclist){
+			## Determine if it has a multi type depends line thus
+			## multi pkgs can satisfy the depend and it shouldn't
+			## warn if one isn't found, as long as one is.
+			@altspec = split(/\s*\|\s*/, $altspecs);
+			$multi = scalar(@altspec);
+			$loopcount = 0;
+			$found = 0;
+		    BUILDDEPENDSLOOP: foreach $depspec (@altspec) {
+			$loopcount++;
 			if ($depspec =~ /^\s*([0-9a-zA-Z.\+-]+)\s*\((.+)\)\s*$/) {
 			    $depname = $1;
 			    $versionspec = $2;
@@ -737,9 +745,12 @@ sub resolve_depends {
 			    die "Illegal spec format: $depspec\n";
 			}
 			$package = Fink::Package->package_by_name($depname);
-			if (not defined $package || $forceoff) {
+			$found = 1 if defined $package;
+			if ($forceoff && (($multi == 1 || $loopcount >= $multi) && $found == 0)) {
 			    print "WARNING: While resolving $oper \"$depspec\" for package \"".$self->get_fullname()."\", package \"$depname\" was not found.\n";
-			    next; # BUILDDEPENDSLOOP
+			}
+			if (not defined $package) {
+				next; # BUILDDEPENDSLOOP
 			}
 			my ($currentpackage, @dependslist, $dependent, $dependentname);
 			$currentpackage = $self->get_name();
@@ -775,9 +786,13 @@ sub resolve_depends {
 		}
 	}
 
-	SPECLOOP: foreach $altspec (@speclist) {
+	SPECLOOP: foreach $altspecs (@speclist) {
 		$altlist = [];
-		foreach $depspec (split(/\s*\|\s*/, $altspec)) {
+		@altspec = split(/\s*\|\s*/, $altspecs);
+		$found = 0;
+		$loopcount = 0;
+		foreach $depspec (@altspec) {
+			$loopcount++;
 			if ($depspec =~ /^\s*([0-9a-zA-Z.\+-]+)\s*\((.+)\)\s*$/) {
 				$depname = $1;
 				$versionspec = $2;
@@ -804,8 +819,11 @@ sub resolve_depends {
 
 			$package = Fink::Package->package_by_name($depname);
 
-			if (not defined $package || $forceoff) {
+			$found = 1 if defined $package;
+			if ($forceoff && (($multi == 1 || $loopcount >= $multi) && $found == 0)) {
 				print "WARNING: While resolving $oper \"$depspec\" for package \"".$self->get_fullname()."\", package \"$depname\" was not found.\n";
+			}
+			if (not defined $package) {
 				next;
 			}
 
@@ -818,7 +836,7 @@ sub resolve_depends {
 			}
 		}
 		if (scalar(@$altlist) <= 0 && lc($field) ne "conflicts") {
-			die "Can't resolve $oper \"$altspec\" for package \"".$self->get_fullname()."\" (no matching packages/versions found)\n";
+			die "Can't resolve $oper \"$altspecs\" for package \"".$self->get_fullname()."\" (no matching packages/versions found)\n";
 		}
 		push @deplist, $altlist;
 		$idx++;
